--- a/showit.cabal
+++ b/showit.cabal
@@ -25,6 +25,7 @@ library
                      , parsec
                      , mtl
                      , containers
+                     , MissingH
   default-language:    Haskell2010
 
 executable showit-compiler
