--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 elm-stuff
 .stack-work
 node_modules
+npm-debug.log
 .showit
 
 codemirror
@@ -12,3 +13,5 @@ lib/scaffold/showit-runtime.js
 lib/public/codemirror.js
 lib/public/codemirror.css
 lib/public/ambiance.css
+platform
+tmp
