--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "showit",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -14,6 +14,7 @@
     "test": "test"
   },
   "scripts": {
+    "install": "node scripts/install.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yosuke Torii <jinjorweb@gmail.com> (https://github.com/jinjor)",
@@ -23,6 +24,7 @@
     "express": "^4.14.0",
     "fs-extra": "^2.0.0",
     "open": "0.0.5",
+    "request": "^2.79.0",
     "ws": "^1.1.1"
   }
 }
