--- a/showit.cabal
+++ b/showit.cabal
@@ -28,7 +28,7 @@ library
                      , MissingH
   default-language:    Haskell2010
 
-executable showit-compiler
+executable showit-compile
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
