--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,1 @@
-elm-stuff
-.stack-work
-node_modules
-.showit
-
-codemirror
-
-.DS_Store
-docs
-example
-src
-test
-platform
-tmp
+# this file is needed to avoid seeing .gitignore
