--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
 script:
 - stack --no-terminal test --haddock --no-haddock-deps
 before_deploy:
+- npm install elm
 - npm install
 - ./build.sh
 deploy:
